# pythia-rs

./: .gitignore  Cargo.toml
src/: config.rs  data.rs  main.rs  workdir.rs
src/config/: mod.rs  runs.rs  sites.rs
src/io/: mod.rs  sitegen.rs
src/processing/: context.rs  mod.rs  template.rs
src/processing/context/: gen.rs  mod.rs
src/processing/pipeline/: mod.rs  sync.rs  threaded.rs
src/processing/processor/: mod.rs  unbatched.rs
src/registry/: error.rs  identifier.rs  itself.rs  mod.rs  resources.rs  serialize.rs
src/sites/: config.rs  drivers.rs  gen.rs  mod.rs
src/utils/: mod.rs  threehashmap.rs
testdata/: DSSAT-Soils.tif  README.md
